--- a/secrets.yml.example
+++ b/secrets.yml.example
@@ -4,6 +4,7 @@ trakt:
   movies: watchlist
 sonarr:
   api: sonarr-api
+  profile_id: 7
 folder:
   anime: folderForSonarr
   series: folderForSonarr
