- login flags for scripts LOCALE support inside containers - strip dates from trakt list - improvements to next ep script

--- a/config.yml
+++ b/config.yml
@@ -219,6 +219,7 @@ tasks:
             account: '{? trakt.account ?}'
             username: '{? trakt.account ?}'
             list: '{? trakt.series ?}'
+            strip_dates: yes
             type: shows 
       fields:
         - title
