changed task dropped_series match to not be exact, because we are stripping dates

--- a/config.yml
+++ b/config.yml
@@ -363,7 +363,7 @@ tasks:
       fields:
         - title
       action: accept
-      exact: yes
+      exact: no
     set:
       location: '{{configure_series_path}}'
     exec: '/opt/scripts/sonarr_delete_series {{sonarr_id}}'
